# Proxy-PDF-Maker

./: .clang-tidy  .conanrc  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  MAC-OS-INSTALLATION.md  README.md  conanfile.py  config.ini  resources.qrc
.github/workflows/: CI.yml  MacOS-ARM64-CI.yml  MacOS-x86-CI.yml  Nightly.yml  Publish.yml  Ubuntu-ARM64-CI.yml  Ubuntu-CI.yml  Ubuntu-x86-CI.yml  Windows-CI.yml
cmake/: breeze.cmake  clang-format.cmake  conan.cmake  generate_install_manifest.cmake  group_files.cmake
res/: proxy_pdf.rc
res/models/: realesr_animevideov3.onnx
source/app/: config.cpp  config.hpp  constants.cpp  main.cpp
source/app/ppp/: app.cpp  app.hpp  auto_update.cpp  auto_update.hpp  config.cpp  config.hpp  constants.cpp  constants.hpp  cubes.cpp  cubes.hpp  image.cpp  image.hpp  main.cpp  plugins.cpp  plugins.hpp  style.cpp  style.hpp  upscale_models.cpp  upscale_models.hpp  util.cpp  util.hpp
source/app/ppp/cli/: cli_main.cpp  cli_main.hpp
source/app/ppp/pdf/: generate.cpp
source/app/ppp/plugins/: card_downloader_popup.cpp  card_downloader_popup.hpp  decklist_textbox.hpp  plugin_interface.hpp
source/app/ppp/plugins/mtg_card_downloader/: download_decklist.cpp  download_decklist.hpp  download_interface.hpp  download_mpcfill.cpp  download_mpcfill.hpp  download_scryfall.cpp  download_scryfall.hpp  mtg_card_downloader.cpp  mtg_card_downloader.hpp  mtg_card_downloader_popup.cpp  mtg_card_downloader_popup.hpp  scryfall_endpoints.cpp  scryfall_endpoints.hpp
source/app/ppp/plugins/yugioh_card_downloader/: download_ygoprodeck.cpp  download_ygoprodeck.hpp  yugioh_card_downloader.cpp  yugioh_card_downloader.hpp  yugioh_card_downloader_popup.cpp  yugioh_card_downloader_popup.hpp
source/app/ppp/project/: image_ops.cpp  image_ops.hpp  project.cpp  project.hpp
source/app/ppp/ui/: collapse_button.cpp  collapse_button.hpp  default_project_value_actions.cpp  default_project_value_actions.hpp  linked_spin_boxes.cpp  linked_spin_boxes.hpp  main_window.cpp  main_window.hpp  popups.cpp  popups.hpp  widget_actions.cpp  widget_actions.hpp  widget_card.cpp  widget_card.hpp  widget_card_area.cpp  widget_card_area.hpp  widget_card_options.cpp  widget_card_options.hpp  widget_combo_box.cpp  widget_combo_box.hpp  widget_double_spin_box.cpp  widget_double_spin_box.hpp  widget_global_options.cpp  widget_global_options.hpp  widget_guides_options.cpp  widget_guides_options.hpp  widget_label.cpp  widget_label.hpp  widget_options.cpp  widget_options.hpp  widget_options_area.cpp  widget_options_area.hpp  widget_print_options.cpp  widget_print_options.hpp  widget_print_preview.cpp  widget_print_preview.hpp  widget_print_preview_card.cpp  widget_print_preview_card.hpp  widget_print_preview_page.cpp  widget_print_preview_page.hpp  (+4 more)
source/app/ppp/ui/popups/: card_size_popup.cpp  card_size_popup.hpp  decklist_popup.cpp  decklist_popup.hpp  image_browse_popup.cpp  image_browse_popup.hpp  new_project_popup.cpp  new_project_popup.hpp  paper_size_popup.cpp  paper_size_popup.hpp
source/app/ppp/ui/preview_overlays/: widget_borders_overlay.cpp  widget_borders_overlay.hpp  widget_guides_overlay.cpp  widget_guides_overlay.hpp  widget_margins_overlay.cpp  widget_margins_overlay.hpp
source/cli/ppp/: main.cpp
source/launcher/ppp/: auto_update.cpp  auto_update.hpp  lib.cpp  lib.hpp  main.cpp
source/lib/include/ppp/: auto_update.hpp  color.hpp  config.hpp  constants.hpp  image.hpp  json_util.hpp  qt_util.hpp  typedefs.hpp  units.hpp  units.inl  util.hpp  version_check.hpp
source/lib/include/ppp/pdf/: generate.hpp  util.hpp
source/lib/include/ppp/plugins/mtg_card_downloader/: decklist_parser.hpp
source/lib/include/ppp/profile/: profile.hpp
source/lib/include/ppp/project/: card_info.hpp  card_provider.hpp  cropper.hpp  cropper_thread_router.hpp  image_database.hpp  image_ops.hpp  project.hpp
source/lib/include/ppp/svg/: generate.hpp  util.hpp
source/lib/include/ppp/util/: at_scope_exit.hpp  bit_field.hpp  log.hpp  type_traits.hpp
source/lib/source/ppp/: auto_update.cpp  color.cpp  config.cpp  constants.cpp  github_request.hpp  image.cpp  json_util.cpp  qt_util.cpp  util.cpp  version_check.cpp
source/lib/source/ppp/pdf/: backend.cpp  backend.hpp  generate.cpp  haru_backend.cpp  haru_backend.hpp  hummus_backend.cpp  hummus_backend.hpp  pdfium_backend.cpp  pdfium_backend.hpp  png_backend.cpp  png_backend.hpp  podofo_backend.cpp  podofo_backend.hpp  util.cpp
source/lib/source/ppp/plugins/mtg_card_downloader/: decklist_parser.cpp
source/lib/source/ppp/profile/: profile.cpp
source/lib/source/ppp/project/: card_info.cpp  card_provider.cpp  cropper.cpp  cropper_signal_router.hpp  cropper_thread_router.cpp  cropper_work.cpp  cropper_work.hpp  image_database.cpp  image_ops.cpp  project.cpp
source/lib/source/ppp/svg/: generate.cpp  util.cpp
source/lib/source/ppp/util/: log.cpp  log_impl.cpp  log_impl.hpp
source/version/: version.cpp  version.hpp
source/version/ppp/: version.cpp  version.hpp
tests/: CMakeLists.txt  cli_tests.cpp  decklist_parser_tests.cpp  image_tests.cpp  madness.CUBE  pdf_tests.cpp  project_tests.cpp
tutorials/: sample_project.json
tutorials/AutoCutting/: README.md
tutorials/LiberProxies/: README.md
